# thesis

./: .gitignore  CMakeLists.txt  LorentzVectorCompressionTest.cpp  README.md  TTreeCompressionTest.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  run.sh
PYTH/: main.py
data/: data.root  data.txt  log_file.txt  vector_data.txt  vector_data_PtEtaPhi.txt  vector_data_PxPyPz.txt  vector_datadefault.root  vector_datarounded.root
data/bytes/: exponential_NO_built_in_round_bytes.txt  exponential_NO_no_round_bytes.txt  exponential_NO_round_1000_bytes.txt  exponential_NO_round_100_bytes.txt  exponential_NO_round_10_bytes.txt  exponential_NO_round_16_bytes.txt  exponential_NO_round_2_bytes.txt  exponential_NO_round_32_bytes.txt  exponential_NO_round_4_bytes.txt  exponential_NO_round_64_bytes.txt  exponential_NO_round_8_bytes.txt  exponential_Z_BEST_COMPRESSION_built_in_round_bytes.txt  exponential_Z_BEST_COMPRESSION_no_round_bytes.txt  exponential_Z_BEST_COMPRESSION_round_1000_bytes.txt  exponential_Z_BEST_COMPRESSION_round_100_bytes.txt  exponential_Z_BEST_COMPRESSION_round_10_bytes.txt  exponential_Z_BEST_COMPRESSION_round_16_bytes.txt  exponential_Z_BEST_COMPRESSION_round_2_bytes.txt  exponential_Z_BEST_COMPRESSION_round_32_bytes.txt  exponential_Z_BEST_COMPRESSION_round_4_bytes.txt  exponential_Z_BEST_COMPRESSION_round_64_bytes.txt  exponential_Z_BEST_COMPRESSION_round_8_bytes.txt  uniform_NO_built_in_round_bytes.txt  uniform_NO_no_round_bytes.txt  uniform_NO_round_1000_bytes.txt  uniform_NO_round_100_bytes.txt  uniform_NO_round_10_bytes.txt  uniform_NO_round_16_bytes.txt  uniform_NO_round_2_bytes.txt  uniform_NO_round_32_bytes.txt  uniform_NO_round_4_bytes.txt  uniform_NO_round_64_bytes.txt  uniform_NO_round_8_bytes.txt  uniform_Z_BEST_COMPRESSION_built_in_round_bytes.txt  uniform_Z_BEST_COMPRESSION_no_round_bytes.txt  uniform_Z_BEST_COMPRESSION_round_1000_bytes.txt  uniform_Z_BEST_COMPRESSION_round_100_bytes.txt  uniform_Z_BEST_COMPRESSION_round_10_bytes.txt  uniform_Z_BEST_COMPRESSION_round_16_bytes.txt  uniform_Z_BEST_COMPRESSION_round_2_bytes.txt  (+4 more)
include/: entropy.h
src/: entropy.cpp
